--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,8 @@ footer {
   border-radius: 0;
 }
 
-#page-top {
+@media screen and (max-width: 576px){
+ #page-top {
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -80,3 +81,5 @@ footer {
   height: 100%;
   border-radius: 50%;
 }
+}
+
